<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sNaPrApE</string>
    <string name="action_camera">Camera</string>
    <string name="action_edit_friends">Add friends</string>
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="empty_inbox">No new messages...</string>
    <string name="empty_friends">Add friends to begin...</string>
    <string name="error_dialog_title">Obs something went wrong</string>
    <string name="error_dialog_message">Please fill out the fields</string>
    <string name="error_dialog_message_friends">Could not find your friends</string>
    <string name="general_error">Sorry there was an error</string>
    <string name="login_error_message">Problems with signing in..</string>
    <string name="menu">Menu</string>
    <string name="not_required">Not required</string>
    <string name="password">Password</string>
    <string name="reg_dialog_title">Problems with registration</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_error_message">Problems with signing up..</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_edit_friends">Choose your friends</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="toast_error_external_storage">There was a problem accessing your devices external storage</string>
    <string name="toast_error_opening_file">There was a problem with the selected file</string>
    <string name="toast_video_file_warning">The selected video must be less than 10 MB</string>
    <string name="username">Username</string>
    <string name="toast_file_size_large">File size is to large!</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipient">Pick friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty_recipients_message">Choose some friends first!</string>
    <string name="action_send">Send</string>
    <string name="error_dialog_select_button">Could not collect the selected file</string>
    <string name="error_dialog_send_message">Oooooob sorry, could not send your message</string>
    <string name="title_activity_sms">Message</string>
    <string name="sms_go">Go</string>
    <string name="sms_hint">Your message</string>
    <string name="action_sms">Sms</string>
    <string name="error_title_some_dialog">Obs something went very wrong</string>
    <string name="description">Content</string>
    <string name="title_activity_view_image">Rabbit</string>
    <string name="content_description">Content description background</string>
    <string name="sub_title">Experimental project</string>
    <string name="cancel">CANCEL</string>
    <string name="content_description_divider">Button divider</string>
    <string name="push_notification_message">You have a new message from %s!</string>

</resources>
